--- a/src/css/css.css
+++ b/src/css/css.css
@@ -149,7 +149,7 @@ main.pnw {
       rgba(255, 255, 255, 0.9),
       rgba(255, 255, 255, 0.9)
     ),
-    url("../public/mountain1.png");
+    url("../public/mountain.png");
   background-position: bottom center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -214,7 +214,7 @@ footer.pnw::before {
   bottom: 0;
   width: 100%;
   height: 50%;
-  background-image: url("../public/mountain1.png");
+  background-image: url("../public/mountain.png");
   background-position: bottom center;
   background-size: contain;
 }
