--- a/src/css/css.css
+++ b/src/css/css.css
@@ -87,7 +87,7 @@ nav.pnw a.pnw:not(:last-child)::after {
   width: 20px;
   height: 30px;
   margin-left: 2rem;
-  background-image: url("../public/pinecone.png");
+  background-image: url("/pinecone.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -129,7 +129,7 @@ body.pnw::before {
       rgba(232, 243, 232, 0.8),
       rgba(232, 243, 232, 0.8)
     ),
-    url("../public/tree.png");
+    url("/tree.png");
   background-position: 0 50px;
   background-size: cover, 102px 189px;
 }
@@ -149,7 +149,7 @@ main.pnw {
       rgba(255, 255, 255, 0.9),
       rgba(255, 255, 255, 0.9)
     ),
-    url("../public/mountain.png");
+    url("/mountain.png");
   background-position: bottom center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -173,7 +173,7 @@ main.pnw::after {
       rgba(255, 255, 255, 0.7),
       rgba(255, 255, 255, 0.7)
     ),
-    url("../public/pinecone.png");
+    url("/pinecone.png");
   background-size: contain;
   top: 5px;
 }
@@ -214,7 +214,7 @@ footer.pnw::before {
   bottom: 0;
   width: 100%;
   height: 50%;
-  background-image: url("../public/mountain.png");
+  background-image: url("/mountain.png");
   background-position: bottom center;
   background-size: contain;
 }
